samples/_failures_safe/1761537898_6d4382_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1d0900e1.c: In function ‘main’:
./samples/SAFE/__tmp_1d0900e1.c:159:32: error: expected ‘;’ at end of input
  159 |     input[strcspn(input, "\n")]
      |                                ^
      |                                ;
./samples/SAFE/__tmp_1d0900e1.c:159:5: error: expected declaration or statement at end of input
  159 |     input[strcspn(input, "\n")]
      |     ^~~~~
